login singup page

--- a/login.html
+++ b/login.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        #login{
+ <style>
+     #login{
             height: 450px;
             width: 50%;
             /* border: 1px solid blue; */
@@ -85,8 +85,7 @@
     margin-left: 13%;
    margin-top: 20px;
 }  
-        
-    </style>
+ </style>
 </head>
 <body>
     
@@ -96,8 +95,11 @@
         <p class="PTag">please enter your mobile and email</p>
         <input  class="inputTag" type="text" id="email" placeholder="email"><br>
         <input type="password"  class="inputTag" id="password" placeholder="password">
-        <button id="btnTag" onclick="login()">Login</button>
+        <button id="btnTag" onclick="sigin()">Login</button>
         <p class="PTag">Don't have an account?<span><a href="/">create one</a></span></p>
     </div>
 </body>
 </html>
+<script src="login.js">
+
+</script>
