--- a/login.html
+++ b/login.html
@@ -93,8 +93,8 @@
     <div id="login">
         <h1 class="h1Tag">LOGIN</h1>
         <p class="PTag">please enter your mobile and email</p>
-        <input  class="inputTag" type="text" id="email" placeholder="email"><br>
-        <input type="password"  class="inputTag" id="password" placeholder="password">
+        <input  class="inputTag" type="text" id="email" placeholder="email" required><br>
+        <input type="password"  class="inputTag" id="password" placeholder="password" required>
         <button id="btnTag" onclick="sigin()">Login</button>
         <p class="PTag">Don't have an account?<span><a href="/">create one</a></span></p>
     </div>
