--- a/signup.html
+++ b/signup.html
@@ -162,10 +162,10 @@ a{
         <h1 class="h1Tag">CREATE ACCOUNT</h1>
         <p class="PTag">Complete the form below to create a bluemercury.com <br>
           account.</p>
-        <input type="text"  class="inputTag" id="email" placeholder="Email*"><br>
-        <input type="text"  class="inputTag" id="fristname" placeholder="Frist Name*"><br>
-        <input type="text"  class="inputTag" id="lastname" placeholder="Last Name*"><br>
-        <input type="password"   class="inputTag" id="password" placeholder="Password*"><br>
+        <input type="text"  class="inputTag" id="email" placeholder="Email*" required><br>
+        <input type="text"  class="inputTag" id="fristname" placeholder="Frist Name*"required><br>
+        <input type="text"  class="inputTag" id="lastname" placeholder="Last Name*" required><br>
+        <input type="password"   class="inputTag" id="password" placeholder="Password*" required><br>
        
         <!-- <input type="datemonth"  class="inputTag" id="Brithday Month" placeholder="Brithday Month*"> -->
 <div class="divTag">
