--- a/shop.html
+++ b/shop.html
@@ -22,7 +22,7 @@
             <p ><a class="prod" href="#">Suncare</a</p> 
                 <p ><a class="prod" href="#">Treatment and Serum</a</p> 
                     <p ><a class="prod" href="#">Vitamins and supliment</a</p>          
-        <hr>
+        <hr> 
          <P>FILTER SKIN CARE BY</P>
          <select id="filterbrand" onchange="filterbrand()">
         <option>FILTER BRANDS</option>
@@ -48,7 +48,7 @@
                 <option>Price High to Low</option>
                 </select></span>
         </div>
-       
+       <div id="containershop"></div>
     </div>
 </div>
 </body>
