--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-    <div id="navbar">
-        <div id="upper">
+    <div id="navbar"> 
+        <!-- <div id="upper">
             <div id="left">
                 <i class="fa fa-map-marker" aria-hidden="true">STORE & SPA LOCATOR</i>
             </div>
@@ -30,12 +30,12 @@
 
             </div>
 
-        </div>
+        </div> -->
 
         <!-- upper part ends here -->
 
         <!-- middle part starts here -->
-        <div id="middle">
+        <!-- <div id="middle">
             <ul>
                 <li><a href="#">SHOP</a>
                     <ul>
@@ -173,12 +173,12 @@
 
 
             </ul>
-        </div>
+        </div> -->
 
 
 
-        <div id="bottom">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, dolore.</div>
-    </div>
+        <!-- <div id="bottom">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, dolore.</div> -->
+    </div> -->
 
 
     <div id="main_body">
@@ -271,6 +271,7 @@
 </html>
 <script  type="module">
 
-   import {footer} from "./components/navbar.js";
+   import {footer,navbar} from "./components/navbar.js";
 document.getElementById("footer").innerHTML = footer();
+document.getElementById("navbar").innerHTML = navbar();
 </script>
