checkout basic layout

--- a/cart/cart.html
+++ b/cart/cart.html
@@ -62,7 +62,9 @@
             <p>Shipping,Taxes,Beauty Cards, and additional discounts applied at the checkout</p>
         </div>
 
-        <div id="div"><button id="checkout_button">CHECKOUT</button></div>
+        <a href="C:\Users\Shivkant\Desktop\Github-Repo\Project3.0#cart\perfect-business-7811\checkout\checkout.html">
+            <div id="div"><button id="checkout_button">CHECKOUT</button></div>
+        </a>
 
     </div>
     <button onclick="getData()">Add to Cart</button>
