--- a/skincareshop.html
+++ b/skincareshop.html
@@ -8,10 +8,24 @@
     <link rel="stylesheet" href="skincareshop.css">
 </head>
 <body>
+    <span><a href="index.html">  Home  </a>/<a href="shop.html">  Shop  </a>/<span id="prod"></span>
     <div id="threecol">
         <div id="smallpic"></div>
         <div id="bigpic"></div>
         <div id="info"></div>
+    </div>
+    <div class="bottomedesc">
+        <h1>Product Information</h1>
+        <p id="desc"></p>
+        <h1>More about Bluemercury Events</h1>
+        <div class="imgflex">
+            <div id="moreimg"></div>
+        </div>
+        <h1>More Products of Bluemercury </h1>
+        <div class="imgflex">
+            <div id="moreimg1"></div>
+        </div>
+        
     </div>
     
 </body>
