--- a/signup.html
+++ b/signup.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
   <link rel="stylesheet" href="signup.css">
+  <link rel="stylesheet" href="navbar.css">
 </head>
 <body>
     
@@ -44,8 +45,17 @@
 </div>
 
     </div>
+
+    <div id="footer"></div>
 </body>
 </html>
 <script src="singup.js">
 
+
 </script>
+
+<!-- <script  type="module">
+
+    import {footer} from "./components/navbar.js";
+ document.getElementById("footer").innerHTML = footer();
+ </script> -->
