--- a/datafeedform.html
+++ b/datafeedform.html
@@ -81,17 +81,17 @@ h2{
             <input type="number" id="price" placeholder="enter price " value="">
             <input type="text" id="description" placeholder="enter description" value="">
             <select id="brand">
-                <option value="111SKIN">111SKIN</option>
-                <option value="BOBBI BROWN">BOBBI BROWN</option>
-                <option value="WILDLING">WILDLING</option>
-                <option value="8GREENS">8GREENS</option>
+                <option value="NATURA_BISSE">NATURA_BISSE</option>
+                <option value="BOBBI_BROWN">BOBBI BROWN</option>
+                <option value="BLUEMERCURY">BLUEMERCURY</option>
+               
                </select>
             <input type="text" id="image" placeholder="enter product url" value="">
             <select id="pricerange">
-             <option value="$0 To $50">$0 To $50</option>
-             <option value="$50 To $100">$50 To $100</option>
-             <option value="$100 To $200">$100 To $200</option>
-            <option value="$200+">$200+</option>
+             <option value="$0_To_$50">$0 To $50</option>
+             <option value="$50_To_$100">$50 To $100</option>
+             <option value="$100_To_$200">$100 To $200</option>
+            <option value="$200">$200+</option>
             </select>
             <select id="sort">
                 <option value="bestseller">Best Seller</option>
