--- a/makeup.html
+++ b/makeup.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skincare | bluemercury</title>
-    <link rel="stylesheet" href="shop.css">
-    <script src="https://kit.fontawesome.com/0aa98ad1b1.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="makeup.css">
+   
     
 </head>
 <body>
@@ -24,13 +24,12 @@
                 <p ><a class="prod" href="#">Treatment and Serum</a</p> 
                     <p ><a class="prod" href="#">Vitamins and supliment</a></p>          
         <hr>
-         <P>FILTER SKIN CARE BY</P>
+         <P>FILTER MAKEUP BY</P>
          <select id="filterbrand1" onchange="filterbrand()">
         <option value="all">FILTER BRANDS All</option>
-        <option value="111SKIN">111SKIN</option>
-        <option value="BOBBI BROWN">BOBBI BROWN</option>
-        <option value="8GREENS">8GREENS</option>
-        <option value="WILDLING">WILDLING</option>
+        <option value="NATURA_BISSE">NATURA_BISSE</option>
+                <option value="BOBBI_BROWN">BOBBI BROWN</option>
+                <option value="BLUEMERCURY">BLUEMERCURY</option>
         </select>
 
         <select id="filterpricerange1" onchange="filterpricerange()">
@@ -61,4 +60,4 @@
 </div>
 </body>
 </html>
-<script src="shop.js"></script>
+<script src="makeup.js"></script>
