--- a/makeup.html
+++ b/makeup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skincare | bluemercury</title>
+    <title>MAKEUP | bluemercury</title>
     <link rel="stylesheet" href="makeup.css">
    
     
@@ -12,17 +12,17 @@
 <body>
 <div id="gridout1">
     <div class="gridin11">
-        <p>SKIN CARE CATEGORY</p>
+        <p>MAKEUP CATEGORY</p>
         <p>Select One to narrow results</p>
         <hr>
-        <p ><a class="prod" href="#">Cleansers</a</p>
-        <p ><a class="prod" href="#">Eye Care</a</p>
-        <p ><a class="prod" href="#">Lip care</a</p>
-        <p ><a class="prod" href="#">Masks</a</p>
-        <p ><a class="prod" href="#">Moisturizers</a</p>    
-            <p ><a class="prod" href="#">Suncare</a</p> 
-                <p ><a class="prod" href="#">Treatment and Serum</a</p> 
-                    <p ><a class="prod" href="#">Vitamins and supliment</a></p>          
+        <p ><a class="prod" href="#">Brushes & Tools</a</p>
+        <p ><a class="prod" href="#">Eyes</a</p>
+        <p ><a class="prod" href="#">Face & Cheek</a</p>
+        <p ><a class="prod" href="#">Lips</a</p>
+        <p ><a class="prod" href="#">Makeup Bags & Accessories</a</p>    
+            <p ><a class="prod" href="#">Makeup Remover</a</p> 
+                <p ><a class="prod" href="#">Nails</a</p> 
+                    <p ><a class="prod" href="#">Palettes & Sets</a></p>          
         <hr>
          <P>FILTER MAKEUP BY</P>
          <select id="filterbrand1" onchange="filterbrand()">
@@ -45,7 +45,7 @@
     </div>
     <div class="gridin12">
         <div class="topflex"> 
-            <p>SKIN CARE</p>
+            <p>MAKEUP</p>
             <span>SORT BY <select id="sortproduct" onchange="sorting()">
                 <option value="all">Featured</option>
                 <option value="bestseller">Best Sellers</option>
