--- a/makeup.html
+++ b/makeup.html
@@ -4,33 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skincare | bluemercury</title>
-    <link rel="stylesheet" href="shop.css">
-    <script src="https://kit.fontawesome.com/0aa98ad1b1.js" crossorigin="anonymous"></script>
+    <title>MAKEUP | bluemercury</title>
+    <link rel="stylesheet" href="makeup.css">
+   
     
 </head>
 <body>
 <div id="gridout1">
     <div class="gridin11">
-        <p>SKIN CARE CATEGORY</p>
+        <p>MAKEUP CATEGORY</p>
         <p>Select One to narrow results</p>
         <hr>
-        <p ><a class="prod" href="#">Cleansers</a</p>
-        <p ><a class="prod" href="#">Eye Care</a</p>
-        <p ><a class="prod" href="#">Lip care</a</p>
-        <p ><a class="prod" href="#">Masks</a</p>
-        <p ><a class="prod" href="#">Moisturizers</a</p>    
-            <p ><a class="prod" href="#">Suncare</a</p> 
-                <p ><a class="prod" href="#">Treatment and Serum</a</p> 
-                    <p ><a class="prod" href="#">Vitamins and supliment</a></p>          
+        <p ><a class="prod" href="#">Brushes & Tools</a</p>
+        <p ><a class="prod" href="#">Eyes</a</p>
+        <p ><a class="prod" href="#">Face & Cheek</a</p>
+        <p ><a class="prod" href="#">Lips</a</p>
+        <p ><a class="prod" href="#">Makeup Bags & Accessories</a</p>    
+            <p ><a class="prod" href="#">Makeup Remover</a</p> 
+                <p ><a class="prod" href="#">Nails</a</p> 
+                    <p ><a class="prod" href="#">Palettes & Sets</a></p>          
         <hr>
-         <P>FILTER SKIN CARE BY</P>
+         <P>FILTER MAKEUP BY</P>
          <select id="filterbrand1" onchange="filterbrand()">
         <option value="all">FILTER BRANDS All</option>
-        <option value="111SKIN">111SKIN</option>
-        <option value="BOBBI BROWN">BOBBI BROWN</option>
-        <option value="8GREENS">8GREENS</option>
-        <option value="WILDLING">WILDLING</option>
+        <option value="NATURA_BISSE">NATURA_BISSE</option>
+                <option value="BOBBI_BROWN">BOBBI BROWN</option>
+                <option value="BLUEMERCURY">BLUEMERCURY</option>
         </select>
 
         <select id="filterpricerange1" onchange="filterpricerange()">
@@ -46,7 +45,7 @@
     </div>
     <div class="gridin12">
         <div class="topflex"> 
-            <p>SKIN CARE</p>
+            <p>MAKEUP</p>
             <span>SORT BY <select id="sortproduct" onchange="sorting()">
                 <option value="all">Featured</option>
                 <option value="bestseller">Best Sellers</option>
@@ -61,4 +60,4 @@
 </div>
 </body>
 </html>
-<script src="shop.js"></script>
+<script src="makeup.js"></script>
