--- a/makeupshop.html
+++ b/makeupshop.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="makeupshop.css">
 </head>
 <body>
-    <span><a href="index.html">  Home  </a>/<a href="makeup.html">  Shop  </a>/<span id="prod"></span>
+    <span><a href="index.html">  Home  </a>/<a href="makeup.html">  Makeup  </a>/<span id="prod"></span>
     <div id="threecol">
         <div id="smallpic"></div>
         <div id="bigpic"></div>
