--- a/skincareshop.html
+++ b/skincareshop.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="skincareshop.css">
 </head>
 <body>
-    <span><a href="index.html">  Home  </a>/<a href="shop.html">  Shop  </a>/<span id="prod"></span>
+    <span><a href="index.html">  Home  </a>/<a href="shop.html">  skincare  </a>/<span id="prod"></span>
     <div id="threecol">
         <div id="smallpic"></div>
         <div id="bigpic"></div>
