update final with navbar and footer

--- a/makeup.html
+++ b/makeup.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MAKEUP | bluemercury</title>
     <link rel="stylesheet" href="makeup.css">
-   
-    
+   <link rel="stylesheet" href="navbar1.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+    <div id="navbar"></div>
 <div id="gridout1">
     <div class="gridin11">
         <p>MAKEUP CATEGORY</p>
@@ -58,6 +59,7 @@
        
     </div>
 </div>
+  <div id="footer"></div>
 </body>
 </html>
-<script src="makeup.js"></script>
+<script src="makeup.js" type="module"></script>
