--- a/shop.html
+++ b/shop.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skincare | bluemercury</title>
     <link rel="stylesheet" href="shop.css">
-    <script src="https://kit.fontawesome.com/0aa98ad1b1.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="navbar1.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
 </head>
 <body>
+    <div id="navbar"></div>
 <div id="gridout1">
     <div class="gridin11">
         <p>SKIN CARE CATEGORY</p>
@@ -59,6 +61,8 @@
        
     </div>
 </div>
+<div id="footer"></div>
 </body>
 </html>
 <script src="shop.js"></script>
+<script src="makeupshop.js" type="module"></script>
