--- a/skincareshop.html
+++ b/skincareshop.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="skincareshop.css">
+    <link rel="stylesheet" href="navbar1.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+ 
 </head>
 <body>
+    <div id="navbar"></div>
     <span><a href="index.html">  Home  </a>/<a href="shop.html">  skincare  </a>/<span id="prod"></span>
     <div id="threecol">
         <div id="smallpic"></div>
@@ -27,7 +31,8 @@
         </div>
         
     </div>
-    
+    <div id="footer"></div>
 </body>
 </html>
 <script src="skincareshop.js"></script>
+<script src="makeupshop.js" type="module"></script>
