--- a/cart.html
+++ b/cart.html
@@ -6,8 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./cart.css">
-    <link rel="stylesheet" href="../navbar.css">
+    <link rel="stylesheet" href="cart.css">
+    <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 
 <body>
@@ -69,8 +71,6 @@
         </a>
 
     </div>
-    <button onclick="getData()">Add to Cart</button>
-
     <div id="footer"></div>
 
 </body>
@@ -78,8 +78,7 @@
 </html>
 
 <script type="module">
-    import { footer, navbar } from "../components/navbar.js"
-    console.log(footer)
+    import { footer, navbar } from "./components/navbar.js"
     document.getElementById("footer").innerHTML = footer()
     document.getElementById('navbar').innerHTML = navbar()
 
