--- a/cart.html
+++ b/cart.html
@@ -66,7 +66,7 @@
             <p>Shipping,Taxes,Beauty Cards, and additional discounts applied at the checkout</p>
         </div>
 
-        <a href=http://127.0.0.1:5500/perfect-business-7811/checkout/checkout.html>
+        <a href="checkout.html">
             <div id="div"><button id="checkout_button">CHECKOUT</button></div>
         </a>
 
